06/13/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.93 'Marshal West':
	- SIGHUP for logfile reset implemented
	(Gustavo Garcia suggestion).
	- log reset command in CLI added.

06/03/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.92 'Marshal West':
	-Issues 126, 127 and 128 fixed.

06/02/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.91 'Marshal West':
	-Issue 128 (sigfault in RFC 6062 TCP operations) fixed.

05/30/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.9 'Marshal West':
	- ephemeral REST API credentials fixed in RFC 6062 TCP communications
	(Issue 126 and Issue 127).
	- Auth code cleaning.
	- Password change in the database of an active session is supported.
	
05/07/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.8 'Marshal West':
	- Code cleaning (compilation warnings, etc).
	- TLS/DTLS log messages fixed.
	- uclient performance improvements.
	- channel function place holders  defined for kernel-level calls.

04/23/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.7 'Marshal West':
	- Performance and socket logging fix (improved) (Issue 123).
	- Code cleaning.
	
04/13/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.6 'Marshal West':
	- Addresses logging fixed.
	- Redis admin options fixed.
	- Redis compilation cleaned.
	- Performance and logging socket problem fixed (Issue 123).

04/07/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.5 'Marshal West':
	- Mobile allocation quota fixed (issue 121);
	- --simple-log option added (Issue 122);
	- documentation fixes (REST API, Redis).

04/06/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.4 'Marshal West':
	- Mobile TCP sessions fixed (issue 120);
	- log information improvements.

04/04/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.3 'Marshal West':
	- Pkey and cert file descriptors to be closed 
	on initialization (issue 118);
	- Address bind indefinite cycle on start-up fixed
	(Issue 119);